test-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-site
  labels:
    app: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-site
  template:
    metadata:
      labels:
        app: test-site
    spec:
      containers:
      - name: test-site
        image: mollee/kubernetes-test-site
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test-site
spec:
  type: NodePort
  selector:
    app: test-site 
  ports:
  - port: 8080
    targetPort: 8080
