ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: mollers.se
    http:
      paths:
      - path: /
        backend:
          serviceName: test-site
          servicePort: 8080
